8351359: OperatingSystemMXBean stops reporting cpuLoad and processCpuLoad after 24.8 days