src/jdk.management/windows/native/libmanagement_ext/OperatingSystemImpl.c
@@ -50,6 +50,9 @@
 #include <process.h>
 #pragma warning(pop)
 
+#include <sys/types.h>
+#include <sys/timeb.h>
+
 typedef unsigned __int32 juint;
 typedef unsigned __int64 julong;
 
@@ -215,10 +218,10 @@ static PdhLookupPerfNameByIndexFunc PdhLookupPerfNameByIndex_i;
  */
 typedef struct {
     HQUERY      query;
-    uint64_t    lastUpdate; // Last time query was updated (ticks)
+    uint64_t    lastUpdate; // Last time query was updated (millis)
 } UpdateQueryS, *UpdateQueryP;
 
-// Min time between query updates (ticks)
+// Min time between query updates (millis)
 static const int MIN_UPDATE_INTERVAL = 500;
 
 /*
@@ -991,7 +994,9 @@ bindPdhFunctionPointers(HMODULE h) {
  */
 static int
 getPerformanceData(UpdateQueryP query, HCOUNTER c, PDH_FMT_COUNTERVALUE* value, DWORD format) {
-    clock_t now = clock();
+    struct _timeb t;
+    _ftime_s(&t);
+    uint64_t now = (t.time * 1000) + t.millitm;
 
     /*
      * Need to limit how often we update the query
